@@ -9,30 +9,32 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 
 public class CameraConfig {
 
-    private static final Path camerasConfigFolderPath = Paths.get(ConfigManager.SettingsPath.toString(), "cameras");
+    private static final Path camerasConfigFolderPath = Path.of(ConfigManager.SettingsPath.toString(), "cameras");
 
-    private final String cameraConfigName;
     private final CameraJsonConfig preliminaryConfig;
-
     private final Path configFolderPath;
     private final Path configPath;
     private final Path driverModePath;
+    private final Path calibrationPath;
     final Path pipelineFolderPath;
 
     public final PipelineConfig pipelineConfig;
 
     CameraConfig(CameraJsonConfig config) {
         preliminaryConfig = config;
-        cameraConfigName = preliminaryConfig.name.replace(' ', '_');
+        String cameraConfigName = preliminaryConfig.name.replace(' ', '_');
         pipelineConfig = new PipelineConfig(this);
 
-        configFolderPath = Paths.get(camerasConfigFolderPath.toString(), cameraConfigName);
-        configPath = Paths.get(configFolderPath.toString(), "camera.json");
-        driverModePath = Paths.get(configFolderPath.toString(), "drivermode.json");
+        configFolderPath = Path.of(camerasConfigFolderPath.toString(), cameraConfigName);
+        configPath = Path.of(configFolderPath.toString(), "camera.json");
+        driverModePath = Path.of(configFolderPath.toString(), "drivermode.json");
+        calibrationPath = Path.of(configFolderPath.toString(), "calibration.json");
         pipelineFolderPath = Paths.get(configFolderPath.toString(), "pipelines");
     }
 
@@ -40,9 +42,10 @@ public class CameraConfig {
         checkFolder();
         checkConfig();
         checkDriverMode();
+        checkCalibration();
         pipelineConfig.check();
 
-        return new FullCameraConfiguration(loadConfig(), pipelineConfig.load(), loadDriverMode(), this);
+        return new FullCameraConfiguration(loadConfig(), pipelineConfig.load(), loadDriverMode(), loadCalibration(), this);
     }
 
     private CameraJsonConfig loadConfig() {
@@ -57,13 +60,26 @@ public class CameraConfig {
 
     private CVPipelineSettings loadDriverMode() {
         CVPipelineSettings driverMode = new CVPipelineSettings();
-        driverMode.nickname = "DRIVERMODE";
         try {
             driverMode = JacksonHelper.deserializer(driverModePath, CVPipelineSettings.class);
         } catch (IOException e) {
             System.err.println("Failed to load camera drivermode: " + driverModePath.toString());
         }
+        if (driverMode != null) {
+            driverMode.nickname = "DRIVERMODE";
+            driverMode.index = -1;
+        }
         return driverMode;
+    }
+
+    private List<CameraCalibrationConfig> loadCalibration() {
+        List<CameraCalibrationConfig> calibrations = new ArrayList<>();
+        try {
+            calibrations = List.of(Objects.requireNonNull(JacksonHelper.deserializer(calibrationPath, CameraCalibrationConfig[].class)));
+        } catch (Exception e) {
+            System.err.println("Failed to load camera calibration: " + driverModePath.toString());
+        }
+        return calibrations;
     }
 
     void saveConfig(CameraJsonConfig config) {
@@ -88,8 +104,19 @@ public class CameraConfig {
         }
     }
 
+
+    public void saveCalibration(List<CameraCalibrationConfig> cal) {
+        CameraCalibrationConfig[] configs = cal.toArray(new CameraCalibrationConfig[0]);
+        try {
+            JacksonHelper.serializer(calibrationPath, configs);
+            FileHelper.setFilePerms(calibrationPath);
+        } catch (IOException e) {
+            System.err.println("Failed to save camera calibration file: " + calibrationPath.toString());
+        }
+    }
+
     void checkFolder() {
-        if (!getConfigFolderExists()) {
+        if (!configFolderExists()) {
             try {
                 if (!(new File(configFolderPath.toUri()).mkdirs())) {
                     System.err.println("Failed to create camera config folder: " + configFolderPath.toString());
@@ -125,15 +152,30 @@ public class CameraConfig {
         }
     }
 
-    private boolean getConfigFolderExists() {
+    private void checkCalibration() {
+        if (!calibrationExists()) {
+            try {
+                List<CameraCalibrationConfig> calibrations = new ArrayList<>();
+                JacksonHelper.serializer(calibrationPath, calibrations.toArray());
+            } catch (IOException e) {
+                System.err.println("Failed to create camera calibration file: " + calibrationPath.toString());
+            }
+        }
+    }
+
+    private boolean configFolderExists() {
         return Files.exists(configFolderPath);
     }
 
     private boolean configExists() {
-        return getConfigFolderExists() && Files.exists(configPath);
+        return configFolderExists() && Files.exists(configPath);
     }
 
     private boolean driverModeExists() {
-        return getConfigFolderExists() && Files.exists(driverModePath);
+        return configFolderExists() && Files.exists(driverModePath);
+    }
+
+    private boolean calibrationExists() {
+        return configFolderExists() && Files.exists(calibrationPath);
     }
 }
